# ADIP

./: Dockerfile  README.md  main.py  pyproject.toml
app/: config.py  database.py  main.py
app/api/: deps.py
app/api/routes/: auctions.py  auth.py  bids.py  documents.py
app/api/websockets/: endpoints.py  manger.py
app/models/: auction.py  document.py  user.py
app/schemas/: auction.py  document.py  user.py
app/services/: auth.py  document_intelligence.py  service_bus.py
app/workers/: document_worker.py
