[project]
name = "adip"
version = "0.1.0"
description = "Auction Document Intelligence Pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "azure-ai-documentintelligence>=1.0.2",
    "azure-identity>=1.25.3",
    "azure-servicebus>=7.14.3",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
